[gd_scene load_steps=4 format=3 uid="uid://dkif6s82xlc4m"]

[ext_resource type="Script" path="res://multiplayer.gd" id="1_3dv0a"]

[sub_resource type="Gradient" id="Gradient_duoio"]
offsets = PackedFloat32Array(0, 0.326347, 0.847305, 0.997006, 1)
colors = PackedColorArray(0.332937, 0.187507, 0.00586512, 1, 0.511732, 0.409417, 0.152655, 1, 0.663769, 0.814596, 0.428717, 1, 0.693043, 0.892612, 0.481872, 1, 0.681333, 0.861406, 0.46061, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p4fr4"]
gradient = SubResource("Gradient_duoio")

[node name="multiplayer" type="Node"]
script = ExtResource("1_3dv0a")

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://map1.tscn")
spawn_path = NodePath("../level")
spawn_limit = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_right = 1114.0
offset_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_p4fr4")

[node name="Control2" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/Control2"]
layout_mode = 0
offset_left = -117.0
offset_top = -69.0
offset_right = 218.0
offset_bottom = 218.0
color = Color(0.486275, 0.4, 0.188235, 1)

[node name="ColorRect2" type="ColorRect" parent="UI/Control2"]
layout_mode = 0
offset_left = 808.0
offset_top = 415.0
offset_right = 992.0
offset_bottom = 862.0
color = Color(0.709804, 0.835294, 0.498039, 1)

[node name="ColorRect3" type="ColorRect" parent="UI/Control2"]
layout_mode = 0
offset_left = 1084.0
offset_top = 43.0
offset_right = 1244.0
offset_bottom = 198.0
color = Color(0.760784, 0.756863, 0.431373, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 1132.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="Find Game" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Find Game"

[node name="ExitGameButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit Game"

[node name="level" type="Node" parent="."]

[connection signal="pressed" from="UI/VBoxContainer/Start" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Find Game" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
